fix extra spacing in menu (#1606)

--- a/src/targets/beacon/styles/views/Menu/index.less
+++ b/src/targets/beacon/styles/views/Menu/index.less
@@ -8,7 +8,6 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
   background-color: #826837;
   z-index: 1002; // Ensure the menu is above the booking bar
   flex-flow: column nowrap;
@@ -76,7 +75,7 @@
   justify-content: flex-end;
   flex: 1;
   position: relative;
-  width: 100%;
+  width: 95%;
   max-width: 1250px;
 }
 
